--- a/projetosid/pom.xml
+++ b/projetosid/pom.xml
@@ -20,6 +20,7 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -31,6 +32,13 @@
         <artifactId>mongodb-driver-sync</artifactId>
         <version>4.2.2</version>
     </dependency>
+    
+    <dependency> 
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-log4j12</artifactId>
+	  <version>1.7.28</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
