--- a/mqttsid/pom.xml
+++ b/mqttsid/pom.xml
@@ -46,6 +46,11 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.5</version>
 		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.23</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
