--- a/projetosid/pom.xml
+++ b/projetosid/pom.xml
@@ -39,6 +39,12 @@
 	  <version>1.7.28</version>
 	</dependency>
     
+    <dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>8.0.23</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
