--- a/projetosid/pom.xml
+++ b/projetosid/pom.xml
@@ -44,6 +44,12 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.23</version>
 	</dependency>
+	
+	<dependency>
+	  	<groupId>org.eclipse.paho</groupId>
+		<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+		<version>1.2.0</version>
+	</dependency>
     
   </dependencies>
 
